// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete dynamic behavior on focus 1`] = `
<ul
  class="relative list-none outline-none py-2 px-0 m-0 rounded-sm bg-white shadow-5"
  data-testid="scroll-menu"
  role="menu"
  tabindex="-1"
>
  <div
    tabindex="0"
  >
    <div
      class="overflow-y max-h [@media(max-height:585px)]:max-h-[calc(50vh [@media(max-height:585px)]:md:max-h-[calc(50vh"
    >
      <li
        aria-disabled="false"
        aria-selected="true"
        class="text-black bg-blue hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-0"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                Belarus
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-1"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                Croatia
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-2"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                Lithuania
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-3"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                Slovakia
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-4"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                Ukraine
              </span>
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</ul>
`;

exports[`Autocomplete dynamic behavior renders custom other options 1`] = `
<div
  data-testid="my-other-option"
>
  Other option!
</div>
`;

exports[`Autocomplete dynamic behavior renders custom other options text and calls onOtherOptionSelect when selected 1`] = `
<li
  aria-disabled="false"
  aria-selected="false"
  class="text-black bg-[transparent] hover:bg-blue focus:bg-blue py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 px-4 border-gray border-solid border-[0] border-t"
  data-testid="other-option"
  role="option"
  tabindex="-1"
>
  <div
    class="flex flex-1 max-w"
  >
    <div
      class="flex flex-col flex-1 min-w"
    >
      <div
        class="flex items-center"
      >
        <span
          class="m-0 text-sm text-black font-regular"
        >
          <span
            class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
          >
            my option:
          </span>
          Other option!
        </span>
      </div>
    </div>
  </div>
</li>
`;

exports[`Autocomplete dynamic behavior renders other option with default text 1`] = `
<li
  aria-disabled="false"
  aria-selected="false"
  class="text-black bg-[transparent] hover:bg-blue focus:bg-blue py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 px-4 border-gray border-solid border-[0] border-t"
  data-testid="other-option"
  role="option"
  tabindex="-1"
>
  <div
    class="flex flex-1 max-w"
  >
    <div
      class="flex flex-col flex-1 min-w"
    >
      <div
        class="flex items-center"
      >
        <span
          class="m-0 text-sm text-black font-regular"
        >
          <span
            class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
          >
            Other option: 
          </span>
          Other option!
        </span>
      </div>
    </div>
  </div>
</li>
`;

exports[`Autocomplete static behavior renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="PicassoAutocomplete-root PicassoAutocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="PicassoContainer-flex"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoOutlinedInput-rootAuto PicassoOutlinedInput-rootMedium MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
        >
          <input
            aria-autocomplete="list"
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            data-testid="autocomplete"
            type="text"
            value=""
          />
          <div
            class="MuiInputAdornment-root PicassoInputAdornment-root PicassoOutlinedInput-resetButton MuiInputAdornment-positionEnd"
            data-testid="reset-adornment"
          >
            <button
              aria-disabled="false"
              class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer rounded-full p-0 w-[1.5em] h-[1.5em] border-none text-graphite hover:bg-gray active:bg-gray focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] bg-transparent"
              data-component-type="button"
              role="reset"
              tabindex="-1"
              type="button"
            >
              <span
                class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
              >
                <svg
                  class="PicassoSvgCloseMinor16-root text-[1.2em] flex-1"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="m8.707 8 3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5Z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <div
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior renders a loading indicator 1`] = `
<div
  class="MuiInputAdornment-root PicassoInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-disablePointerEvents"
  data-testid="loading-adornment"
>
  <div
    class="PicassoLoader-root"
  >
    <div
      aria-valuenow="35"
      class="MuiCircularProgress-root PicassoCircularProgress-root PicassoLoader-spinnerBlue MuiCircularProgress-colorPrimary MuiCircularProgress-determinate"
      role="progressbar"
      style="width: 16px; height: 16px; transform: rotate(-90deg);"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
          style="stroke-dasharray: 126.920; stroke-dashoffset: 82.498px;"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior renders custom display value 1`] = `
<ul
  class="relative list-none outline-none py-2 px-0 m-0 rounded-sm bg-white shadow-5"
  data-testid="scroll-menu"
  role="menu"
  tabindex="-1"
>
  <div
    tabindex="0"
  >
    <div
      class="overflow-y max-h [@media(max-height:585px)]:max-h-[calc(50vh [@media(max-height:585px)]:md:max-h-[calc(50vh"
    >
      <li
        aria-disabled="false"
        aria-selected="true"
        class="text-black bg-blue hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-0"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                BelarusBY
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-1"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                CroatiaHR
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-2"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                LithuaniaLU
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-3"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                SlovakiaSK
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-4"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                UkraineUA
              </span>
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</ul>
`;

exports[`Autocomplete static behavior renders custom options with custom keys 1`] = `
<ul
  class="relative list-none outline-none py-2 px-0 m-0 rounded-sm bg-white shadow-5"
  data-testid="scroll-menu"
  role="menu"
  tabindex="-1"
>
  <div
    tabindex="0"
  >
    <div
      class="overflow-y max-h [@media(max-height:585px)]:max-h-[calc(50vh [@media(max-height:585px)]:md:max-h-[calc(50vh"
    >
      <li
        aria-disabled="false"
        aria-selected="true"
        class="text-black bg-blue hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-0"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                data-testid="custom-option"
              >
                BY
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-1"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                data-testid="custom-option"
              >
                HR
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-2"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                data-testid="custom-option"
              >
                LU
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-3"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                data-testid="custom-option"
              >
                SK
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-4"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                data-testid="custom-option"
              >
                UA
              </div>
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</ul>
`;

exports[`Autocomplete static behavior uses a custom popper container 1`] = `
<input
  aria-autocomplete="list"
  aria-invalid="false"
  autocomplete="off"
  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
  data-testid="autocomplete"
  type="text"
  value=""
/>
`;
